crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-multi_embeddings_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
---
"HTTP error: 400 Bad Request - Arrow error: Cast error: cannot cast fixed-size-list to fixed-size-list with different size"
