crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-multi_embeddings_megascience_vector_search_sql_vectors.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
---
"HTTP error: 400 Bad Request - Arrow error: Cast error: cannot cast fixed-size-list to fixed-size-list with different size"
