crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-text_search_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": []
}
