crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-vector_search_metadata_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
[
  {
    "id": 468,
    "_score": 0.77
  },
  {
    "id": 1277,
    "_score": 0.769
  },
  {
    "id": 189,
    "_score": 0.769
  },
  {
    "id": 948,
    "_score": 0.765
  }
]
